--- a/src/classes/XLite/Module/Coinbase/CoinbaseCommercePayment/upgrade/5.3/0.1/post_rebuild.yaml
+++ b/src/classes/XLite/Module/Coinbase/CoinbaseCommercePayment/upgrade/5.3/0.1/post_rebuild.yaml
@@ -6,5 +6,5 @@
 # See https://www.x-cart.com/license-agreement.html for license details.
 
 XLite\Model\Payment\Method:
-  - service_name: CoinbaseCommercePayment
+  - service_name: PrivacyGatePayment
     type: N
