--- a/.circleci/params.ini
+++ b/.circleci/params.ini
@@ -1,4 +1,4 @@
 [params]
   version = 1.0.1
-  github_user = coinbase
-  repo = coinbase-commerce-xcart
+  github_user = privacyshore
+  repo = privacygate-xcart
