--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "coinbase/coinbase-commerce-xcart",
-    "description": "Coinbase Commerce plugin for Xcart",
+    "name": "privacygate/privacygate-xcart",
+    "description": "PrivacyGate plugin for Xcart",
     "type": "composer-plugin",
     "license": "Apache-2.0",
     "require": {
-        "coinbase/coinbase-commerce": "^1.0.0"
+        "privacygate/privacygate": "^1.0.0"
     },
     "config": {
-        "vendor-dir": "src/classes/XLite/Module/Coinbase/CoinbaseCommercePayment/Logic/CoinbaseSDK"
+        "vendor-dir": "src/classes/XLite/Module/PrivacyGate/PrivacyGatePayment/Logic/PrivacyGateSDK"
     }
 }
