--- a/src/classes/XLite/Module/Coinbase/CoinbaseCommercePayment/install.yaml
+++ b/src/classes/XLite/Module/Coinbase/CoinbaseCommercePayment/install.yaml
@@ -6,12 +6,12 @@
 # See https://www.x-cart.com/license-agreement.html for license details.
 
 XLite\Model\Payment\Method:
-  - service_name: CoinbaseCommercePayment
-    class: Module\Coinbase\CoinbaseCommercePayment\Model\Payment\Processor\CoinbaseCommercePayment
+  - service_name: PrivacyGatePayment
+    class: Module\PrivacyGate\PrivacyGatePayment\Model\Payment\Processor\PrivacyGatePayment
     type: N
     translations:
       - code: en
-        name: Coinbase Commerce
+        name: PrivacyGate
     settings:
       - name: app_key
       - name: secret_key
